@@ -48,7 +48,7 @@
   months, with the intervals beginning on January 1, April 1,
   July 1 or October 1, based upon \code{min(x)} as appropriate.
 
-  As vector \code{break} will be sorted before use: \code{labels} will
+  A vector \code{breaks} will be sorted before use: \code{labels} will
   then correspond to the sorted vector.  
 }
 \value{
